--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <div class="sticky-top bg-white p-2 shadow" style="--bs-bg-opacity: 0.95">
     <nav class="navbar navbar-expand-lg navbar-light container">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Web Developers!</a>
+        <div class="container-fluid ">
+            <a class="navbar-brand fs-4" href="#">Web Developers!</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
                     aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                 </ul>
-                <div class="d-flex justify-content-end" style="width:154.5px">
+                <div class="d-flex justify-content-end" style="width:185px">
                     <button class="btn btn-primary">Get Started</button>
                 </div>
             </div>
