some change on navbar again

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                 </ul>
-                <div class="d-flex justify-content-end" style="width:185px">
+                <div class="d-flex justify-content-lg-end" style="width:185px">
                     <button class="btn btn-primary">Get Started</button>
                 </div>
             </div>
