--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Web Developers!</title>
 </head>
 <body>
+
+<!--navbar-->
 <div class="sticky-top bg-white p-2 shadow" style="--bs-bg-opacity: 0.95">
     <nav class="navbar navbar-expand-lg navbar-light container">
         <div class="container-fluid ">
@@ -40,6 +42,29 @@
             </div>
         </div>
     </nav>
+</div>
+
+
+<!-- header -->
+<div class="py-4">
+    <header class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <h2 class="display-4 mb-4">Build <span class="text-warning">reactive</span> websites easily!</h2>
+                <p class="lead text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="text-center text-md-start">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#getStartedModal">
+                        Get Started
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="img/header.png" class="img-fluid">
+            </div>
+        </div>
+    </header>
 </div>
 
 
