--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <img src="img/header.png" class="img-fluid">
+                <img src="images/header.png" class="img-fluid">
             </div>
         </div>
     </header>
