adding react js section to the website

--- a/index.html
+++ b/index.html
@@ -192,6 +192,32 @@
     </section>
 </div>
 
+<!-- reactjs -->
+<div class="py-4" style="background-color: #081828;">
+    <section class="container">
+        <div class="row align-items-center" style="height: 550px">
+            <div class="col-md-6">
+                <img src="img/react.svg" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <h2 class="display-4 mb-4 text-white">Suitable for <span class="text-warning">big projects</span></h2>
+                <p class="lead text-white mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="text-center text-md-start">
+                    <a href="#" class="btn btn-primary">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                             class="bi bi-chevron-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                  d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                        Read more
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
