--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <section class="container">
         <div class="row align-items-center" style="height: 550px">
             <div class="col-md-6">
-                <img src="img/react.svg" class="img-fluid">
+                <img src="images/react.svg" class="img-fluid">
             </div>
             <div class="col-md-6">
                 <h2 class="display-4 mb-4 text-white">Suitable for <span class="text-warning">big projects</span></h2>
