--- a/index.html
+++ b/index.html
@@ -219,6 +219,76 @@
 </div>
 
 
+<!-- posts -->
+<div class="py-4" id="navbarBlog">
+    <main class="container">
+        <h2 class="text-center display-5 mt-5">Recent posts form our Blog</h2>
+        <p class="lead text-muted mb-5 pb-3 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+            do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card mb-3 shadow">
+                    <img src="images/post1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title mb-4">This is a wider card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</h5>
+                        <a href="#" class="card-text fs-5 pb-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                      d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                            </svg>
+                            Read more
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card mb-3 shadow">
+                    <img src="images/post2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title mb-4">This is a wider card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</h5>
+                        <a href="#" class="card-text fs-5 pb-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                      d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                            </svg>
+                            Read more
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card mb-3 shadow">
+                    <img src="images/post3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title mb-4">This is a wider card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</h5>
+                        <a href="#" class="card-text fs-5 pb-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                      d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                            </svg>
+                            Read more
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+</div>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
