--- a/index.html
+++ b/index.html
@@ -631,6 +631,71 @@
     </section>
 </div>
 
+    <!-- Footer -->
+    <div class="py-4 text-white" style="background-color: #081828">
+      <footer class="container pt-5">
+        <div class="row py-4">
+          <div class="col-md-3">
+            <h2 class="mb-4">Web Developers!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="col-md-3">
+            <h3 class="border-start border-4 border-primary ps-3">Pages</h3>
+            <ul class="list-unstyled mt-4">
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h3 class="border-start border-4 border-primary ps-3">More</h3>
+            <ul class="list-unstyled mt-4">
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h3 class="border-start border-4 border-primary ps-3">Posts</h3>
+            <ul class="list-unstyled mt-4">
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <hr>
+        <div class="text-center"> Designed and Developed by : <a href="#" class="text-decoration-none" style="color: #ddd">Sepehr Abdi Bastami</a></div>
+      </footer>
+    </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
