--- a/index.html
+++ b/index.html
@@ -37,11 +37,34 @@
                     </li>
                 </ul>
                 <div class="d-flex justify-content-lg-end" style="width:185px">
-                    <button class="btn btn-primary">Get Started</button>
+                    <button class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#getStartedModal">Get Started
+                    </button>
                 </div>
             </div>
         </div>
     </nav>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="getStartedModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Get Started Now!</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="contactEmail" class="form-label"> Enter Your Email For Newletter </label>
+                        <input type="email" class="form-control" id="contactEmail" placeholder="name@example.com">
+                    </div>
+                    <button class="btn btn-primary">Subscribe</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 
@@ -631,70 +654,72 @@
     </section>
 </div>
 
-    <!-- Footer -->
-    <div class="py-4 text-white" style="background-color: #081828">
-      <footer class="container pt-5">
+<!-- Footer -->
+<div class="py-4 text-white" style="background-color: #081828">
+    <footer class="container pt-5">
         <div class="row py-4">
-          <div class="col-md-3">
-            <h2 class="mb-4">Web Developers!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <div class="col-md-3">
-            <h3 class="border-start border-4 border-primary ps-3">Pages</h3>
-            <ul class="list-unstyled mt-4">
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h3 class="border-start border-4 border-primary ps-3">More</h3>
-            <ul class="list-unstyled mt-4">
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h3 class="border-start border-4 border-primary ps-3">Posts</h3>
-            <ul class="list-unstyled mt-4">
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
-              </li>
-            </ul>
-          </div>
+            <div class="col-md-3">
+                <h2 class="mb-4">Web Developers!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.</p>
+            </div>
+            <div class="col-md-3">
+                <h3 class="border-start border-4 border-primary ps-3">Pages</h3>
+                <ul class="list-unstyled mt-4">
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h3 class="border-start border-4 border-primary ps-3">More</h3>
+                <ul class="list-unstyled mt-4">
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h3 class="border-start border-4 border-primary ps-3">Posts</h3>
+                <ul class="list-unstyled mt-4">
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Vue.js</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">React.js</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Our team</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-decoration-none" style="color: #ddd">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <hr>
-        <div class="text-center"> Designed and Developed by : <a href="#" class="text-decoration-none" style="color: #ddd">Sepehr Abdi Bastami</a></div>
-      </footer>
-    </div>
+        <div class="text-center"> Designed and Developed by : <a href="#" class="text-decoration-none"
+                                                                 style="color: #ddd">Sepehr Abdi Bastami</a></div>
+    </footer>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
