adding scroll feature to some buttons of website

--- a/index.html
+++ b/index.html
@@ -27,14 +27,18 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#navbarFeatures">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#navbarBlog">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#navbarTeam">Our team</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#navbarContact">Contact</a>
+                    </li>
+
                 </ul>
                 <div class="d-flex justify-content-lg-end" style="width:185px">
                     <button class="btn btn-primary" data-bs-toggle="modal"
