some changes on project.

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 <form class="bg-primary p-4 rounded">
                     <div class="mb-3">
                         <label for="contactFullanme" class="form-label">Fullname</label>
-                        <input type="text" class="form-control" id="contactFullanme" placeholder="Ex: Mehran Tarif">
+                        <input type="text" class="form-control" id="contactFullanme" placeholder="Full Name">
                     </div>
                     <div class="mb-3">
                         <label for="contactEmail" class="form-label">Email address</label>
