some changes on project.

--- a/index-fa.html
+++ b/index-fa.html
@@ -635,7 +635,7 @@
                 <form class="bg-primary p-4 rounded">
                     <div class="mb-3">
                         <label for="contactFullanme" class="form-label">نام کامل</label>
-                        <input type="text" class="form-control" id="contactFullanme" placeholder="مثلا مهران تعریف">
+                        <input type="text" class="form-control" id="contactFullanme" placeholder="نام و نام خانوادگی">
                     </div>
                     <div class="mb-3">
                         <label for="contactEmail" class="form-label">آدرس ایمیل</label>
